--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -14,8 +14,11 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "^1.5.1",
     "react-native-image-header-scroll-view": "^0.10.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-smooth-pincode-input": "^1.0.9",
     "react-native-status-bar-height": "^2.4.0",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
