--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "fast-chunk-string": "^1.0.1",
+    "format-number-with-string": "0.0.2",
     "native-base": "^2.13.8",
     "react": "16.8.3",
     "react-dom": "16.8.3",
@@ -16,6 +18,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "^1.5.1",
+    "react-native-global-props": "^1.1.5",
     "react-native-image-header-scroll-view": "^0.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-smooth-pincode-input": "^1.0.9",
