--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -8,12 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@twotalltotems/react-native-otp-input": "^1.1.2",
     "axios": "^0.19.0",
     "expo": "^35.0.0",
     "fast-chunk-string": "^1.0.1",
     "format-number-with-string": "0.0.2",
     "native-base": "^2.13.8",
     "react": "16.8.3",
+    "react-countdown": "^2.2.0",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
