--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -15,10 +15,10 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb": "^3.3.0-beta2",
     "mysql": "^2.17.1",
     "nodemailer": "^6.3.0",
     "nodemailer-ses-transport": "^1.5.1",
-    "serverless-offline": "^5.11.0",
-    "mongodb": "^3.3.0-beta2"
+    "serverless-offline": "^5.11.0"
   }
 }
