--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -32,7 +32,8 @@
     "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
-    "rn-sliding-button": "^1.1.5"
+    "rn-sliding-button": "^1.1.5",
+    "expo-barcode-scanner": "~7.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
