--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -11,6 +11,7 @@
     "@twotalltotems/react-native-otp-input": "^1.1.2",
     "axios": "^0.19.0",
     "expo": "^35.0.0",
+    "expo-barcode-scanner": "^7.0.0",
     "fast-chunk-string": "^1.0.1",
     "format-number-with-string": "0.0.2",
     "native-base": "^2.13.8",
@@ -32,8 +33,7 @@
     "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
-    "rn-sliding-button": "^1.1.5",
-    "expo-barcode-scanner": "~7.0.0"
+    "rn-sliding-button": "^1.1.5"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
