fixed serverless.yml file

--- a/Back-end/serverless.yml
+++ b/Back-end/serverless.yml
@@ -31,5 +31,7 @@ functions:
           method: POST
           path: /sendmail
           cors: true
-      
-
+      - http:
+          method: POST
+          path: /transfer_byqr
+          cors: true
