Changed to serverless format - 2

--- a/Back-end/serverless.yml
+++ b/Back-end/serverless.yml
@@ -12,6 +12,13 @@ plugins:
   - serverless-offline
   
 functions:
+  authenticate_test:
+    handler: handler.authenticate_test
+    events:
+     - http:
+         path: authenticate_test
+         method: post
+         cors: true
   wd_groups:
     handler: handler.cp3405
     events:
