--- a/Back-end/serverless.yml
+++ b/Back-end/serverless.yml
@@ -37,18 +37,24 @@ functions:
          path: sendmail
          method: post
          cors: true
+  get_otp:
+    handler: handler.get_otp
+    events:
+      - http:
+          path: get_otp
+          method: post
+          cors: true
+  check_otp:
+    handler: handler.check_otp
+    events:
+      - http:
+          path: check_otp
+          method: post
+          cors: true
   wd_groups:
     handler: handler.cp3405
     events:
       - http:
           method: GET
           path: /
-          cors: true
-      - http:
-          method: POST
-          path: /transfer_byqrtest
-          cors: true
-      - http:
-          method: POST
-          path: /transfer_test
           cors: true
