--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@twotalltotems/react-native-otp-input": "^1.1.2",
     "axios": "^0.19.0",
+    "credit-card-space": "^1.4.2",
     "expo": "^35.0.0",
     "expo-barcode-scanner": "^7.0.0",
     "fast-chunk-string": "^1.0.1",
