--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -26,6 +26,9 @@
     "react-native-global-props": "^1.1.5",
     "react-native-image-header-scroll-view": "^0.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-popup-dialog": "^0.18.3",
+    "react-native-qrcode": "^0.2.7",
+    "react-native-qrcode-generator": "^1.1.0",
     "react-native-slide-button": "^1.2.1",
     "react-native-smooth-pincode-input": "^1.0.9",
     "react-native-status-bar-height": "^2.4.0",
