--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -21,11 +21,14 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-check-box": "^2.1.7",
     "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "^1.5.1",
     "react-native-global-props": "^1.1.5",
     "react-native-image-header-scroll-view": "^0.10.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-popup-dialog": "^0.18.3",
+    "react-native-qrcode": "^0.2.7",
     "react-native-slide-button": "^1.2.1",
     "react-native-smooth-pincode-input": "^1.0.9",
     "react-native-status-bar-height": "^2.4.0",
