Added more in backend

--- a/Back-end/serverless.yml
+++ b/Back-end/serverless.yml
@@ -37,6 +37,13 @@ functions:
          path: save_transaction
          method: post
          cors: true
+  getTransactions:
+    handler: handler.getTransactions
+    events:
+     - http:
+         path: getTransactions
+         method: get
+         cors: true
   sendmail:
     handler: handler.sendmail
     events:
