--- a/Front-end/app.json
+++ b/Front-end/app.json
@@ -25,6 +25,8 @@
     ],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "description": "",
+    "githubUrl": "https://github.com/mvpclub/cp3405-sp53-2019-assignment2-full_stack_beast_-_group-6"
   }
 }
